Fix missing and duplicate initializations in inputHandler after merge, fix issues with clearing optimization constraints, move from CSS pseudos to event handlers to allow for translations

--- a/app/app.html
+++ b/app/app.html
@@ -85,7 +85,7 @@ window.jQuery = $;
 
             <div id="preview-panel" class="constraints-panel-col-med">
               <div class="panelLabel">
-                <div class="panelLabelText" id="optionsLabel" data-tl-key="statsLabel">Stats</div>
+                <div class="panelLabelText" id="statsLabel" data-tl-key="statsLabel">Stats</div>
                 <img src="./assets/tooltip.png" class="tooltipImage" id="previewTooltip"></img>
               </div>
 
@@ -236,7 +236,7 @@ window.jQuery = $;
 
             <div id="placeholder-panel" class="constraints-panel-col-small">
               <div class="panelLabel">
-                <div class="panelLabelText" id="statsLabel" data-tl-key="statFiltersLabel">Stat filters</div>
+                <div class="panelLabelText" id="statFiltersLabel" data-tl-key="statFiltersLabel">Stat filters</div>
                 <img src="./assets/tooltip.png" class="tooltipImage" id="filterStatsTooltip"></img>
               </div>
               <input type="number" id="inputMinAtkLimit" class="optimizer-number-input stat-number-input">
