Add text replacement functionality to tables

--- a/app/app.html
+++ b/app/app.html
@@ -278,19 +278,19 @@ window.jQuery = $;
                 <img src="./assets/tooltip.png" class="tooltipImage" id="filterRatingsTooltip"></img>
               </div>
               <input type="number" id="inputMinCpLimit" class="optimizer-number-input rating-number-input">
-              <div class="inputStatLabel" data-tl-key="ratingCpLabel">Cp</div>
+              <div class="inputStatLabel" data-tl-key="ratingCombatPowerLabel">Cp</div>
               <input type="number" id="inputMaxCpLimit" class="optimizer-number-input rating-number-input"><br>
 
               <input type="number" id="inputMinHppsLimit" class="optimizer-number-input rating-number-input">
-              <div class="inputStatLabel" data-tl-key="ratingHpSLabel">HpS</div>
+              <div class="inputStatLabel" data-tl-key="ratingHpSpeedLabel">HpS</div>
               <input type="number" id="inputMaxHppsLimit" class="optimizer-number-input rating-number-input"><br>
 
               <input type="number" id="inputMinEhpLimit" class="optimizer-number-input rating-number-input">
-              <div class="inputStatLabel" data-tl-key="ratingEhpLabel">Ehp</div>
+              <div class="inputStatLabel" data-tl-key="ratingEffectiveHpLabel">Ehp</div>
               <input type="number" id="inputMaxEhpLimit" class="optimizer-number-input rating-number-input"><br>
 
               <input type="number" id="inputMinEhppsLimit" class="optimizer-number-input rating-number-input">
-              <div class="inputStatLabel" data-tl-key="ratingEhpSLabel">EhpS</div>
+              <div class="inputStatLabel" data-tl-key="ratingEffectiveHpSpeedLabel">EhpS</div>
               <input type="number" id="inputMaxEhppsLimit" class="optimizer-number-input rating-number-input"><br>
 
               <input type="number" id="inputMinDmgLimit" class="optimizer-number-input rating-number-input">
@@ -298,27 +298,27 @@ window.jQuery = $;
               <input type="number" id="inputMaxDmgLimit" class="optimizer-number-input rating-number-input"><br>
 
               <input type="number" id="inputMinDmgpsLimit" class="optimizer-number-input rating-number-input">
-              <div class="inputStatLabel" data-tl-key="ratingDmgSLabel">DmgS</div>
+              <div class="inputStatLabel" data-tl-key="ratingDmgSpeedLabel">DmgS</div>
               <input type="number" id="inputMaxDmgpsLimit" class="optimizer-number-input rating-number-input"><br>
 
               <input type="number" id="inputMinMcdmgLimit" class="optimizer-number-input rating-number-input">
-              <div class="inputStatLabel" data-tl-key="ratingMcdLabel">Mcd</div>
+              <div class="inputStatLabel" data-tl-key="ratingMaxCritDmgLabel">Mcd</div>
               <input type="number" id="inputMaxMcdmgLimit" class="optimizer-number-input rating-number-input"><br>
 
               <input type="number" id="inputMinMcdmgpsLimit" class="optimizer-number-input rating-number-input">
-              <div class="inputStatLabel" data-tl-key="ratingMcdSLabel">McdS</div>
+              <div class="inputStatLabel" data-tl-key="ratingMaxCritDmgSpeedLabel">McdS</div>
               <input type="number" id="inputMaxMcdmgpsLimit" class="optimizer-number-input rating-number-input"><br>
 
               <input type="number" id="inputMinDmgHLimit" class="optimizer-number-input rating-number-input">
-              <div class="inputStatLabel" data-tl-key="ratingDmgHLabel">DmgH</div>
+              <div class="inputStatLabel" data-tl-key="ratingDmgHealthLabel">DmgH</div>
               <input type="number" id="inputMaxDmgHLimit" class="optimizer-number-input rating-number-input"><br>
 
               <input type="number" id="inputMinScoreLimit" class="optimizer-number-input rating-number-input">
-              <div class="inputStatLabel" data-tl-key="ratingScoreLabel">Score</div>
+              <div class="inputStatLabel" data-tl-key="ratingGearScoreLabel">Score</div>
               <input type="number" id="inputMaxScoreLimit" class="optimizer-number-input rating-number-input"><br>
 
               <input type="number" id="inputMinUpgradesLimit" class="optimizer-number-input rating-number-input">
-              <div class="inputStatLabel" data-tl-key="ratingUpgLabel">Upg</div>
+              <div class="inputStatLabel" data-tl-key="ratingNumGearsToUpgradeLabel">Upg</div>
               <input type="number" id="inputMaxUpgradesLimit" class="optimizer-number-input rating-number-input"><br>
             </div>
 
@@ -327,7 +327,7 @@ window.jQuery = $;
             <div id="stat-priority-panel" class="constraints-panel-col">
 
               <div class="panelLabel">
-                <div class="panelLabelText" id="substatPriorityLabel" data-tl-key="substatPriorityLabel">Substat priority (<u>clear</u>)</div>
+                <div class="panelLabelText" id="substatPriorityLabel" data-tl-key="substatPriorityLabel">Substat priority</div>
                 <img src="./assets/tooltip.png" class="tooltipImage" id="substatPriorityTooltip"></img>
               </div>
 
