Add text replacement to tooltips and allow certain HTML tags in translations for styling

--- a/app/app.html
+++ b/app/app.html
@@ -405,32 +405,32 @@ window.jQuery = $;
                 <option value="CriticalHitChancePercent" data-tl-key="statCritChanceLabel">Crit Chance</option>
                 <option value="CriticalHitDamagePercent" data-tl-key="statCritDamageLabel">Crit Damage</option>
                 <option value="AttackPercent" data-tl-key="statAttackPercentLabel">Attack %</option>
-                <option value="Attack" data-tl-key="statFlatAttackLabel">Attack</option>
+                <option value="Attack" data-tl-key="statAttackLabel">Attack</option>
                 <option value="HealthPercent" data-tl-key="statHealthPercentLabel">Health %</option>
-                <option value="Health" data-tl-key="statFlatHealthLabel">Health</option>
+                <option value="Health" data-tl-key="statHealthLabel">Health</option>
                 <option value="DefensePercent" data-tl-key="statDefensePercentLabel">Defense %</option>
-                <option value="Defense" data-tl-key="statFlatDefenseLabel">Defense</option>
+                <option value="Defense" data-tl-key="statDefenseLabel">Defense</option>
               </select><br>
 
               <select multiple="multiple" id="inputRingStat" class="inputGearFilterSelect">
                 <option value="EffectivenessPercent" data-tl-key="statEffectivenessLabel">Effectiveness</option>
                 <option value="EffectResistancePercent" data-tl-key="statEffectResistanceLabel">Effect Resistance</option>
                 <option value="AttackPercent" data-tl-key="statAttackPercentLabel">Attack %</option>
-                <option value="Attack" data-tl-key="statFlatAttackLabel">Attack</option>
+                <option value="Attack" data-tl-key="statAttackLabel">Attack</option>
                 <option value="HealthPercent" data-tl-key="statHealthPercentLabel">Health %</option>
-                <option value="Health" data-tl-key="statFlatHealthLabel">Health</option>
+                <option value="Health" data-tl-key="statHealthLabel">Health</option>
                 <option value="DefensePercent" data-tl-key="statDefensePercentLabel">Defense %</option>
-                <option value="Defense" data-tl-key="statFlatDefenseLabel">Defense</option>
+                <option value="Defense" data-tl-key="statDefenseLabel">Defense</option>
               </select><br>
 
               <select multiple="multiple" id="inputBootsStat" class="inputGearFilterSelect">
                 <option value="Speed" data-tl-key="statSpeedLabel">Speed</option>
                 <option value="AttackPercent" data-tl-key="statAttackPercentLabel">Attack %</option>
-                <option value="Attack" data-tl-key="statFlatAttackLabel">Attack</option>
+                <option value="Attack" data-tl-key="statAttackLabel">Attack</option>
                 <option value="HealthPercent" data-tl-key="statHealthPercentLabel">Health %</option>
-                <option value="Health" data-tl-key="statFlatHealthLabel">Health</option>
+                <option value="Health" data-tl-key="statHealthLabel">Health</option>
                 <option value="DefensePercent" data-tl-key="statDefensePercentLabel">Defense %</option>
-                <option value="Defense" data-tl-key="statFlatDefenseLabel">Defense</option>
+                <option value="Defense" data-tl-key="statDefenseLabel">Defense</option>
               </select><br>
 
               <div class="panelLabel">
@@ -581,7 +581,7 @@ window.jQuery = $;
 
               <div class="topHalfRightPanel">
                 <div class="panelLabel">
-                  <div class="panelLabelText" data-tl-key="filteredResultsLabel">Filter/Search details</div>
+                  <div class="panelLabelText" data-tl-key="filterDetailsLabel">Filter/Search details</div>
                   <img src="./assets/tooltip.png" class="tooltipImage" id="filterDetailsTooltip"></img>
                 </div>
 
@@ -972,7 +972,7 @@ window.jQuery = $;
                   <div class="gearTabLongButton">
                     <div class="gearTabButton" id="mainStatAttackFilter">
                       <img class="gearTabIcon" src="./assets/statatkdark.png"></img>
-                      <div class="gearTabButtonLabel" data-tl-key="statFlatAttackLabel">Attack</div>
+                      <div class="gearTabButtonLabel" data-tl-key="statAttackLabel">Attack</div>
                     </div>
                   </div>
                   <div class="gearTabLongButton">
@@ -1000,7 +1000,7 @@ window.jQuery = $;
                   <div class="gearTabLongButton">
                     <div class="gearTabButton" id="mainStatHealthFilter">
                       <img class="gearTabIcon" src="./assets/stathpdark.png"></img>
-                      <div class="gearTabButtonLabel" data-tl-key="statFlatHealthLabel">Health</div>
+                      <div class="gearTabButtonLabel" data-tl-key="statHealthLabel">Health</div>
                     </div>
                   </div>
                   <div class="gearTabLongButton">
@@ -1028,7 +1028,7 @@ window.jQuery = $;
                   <div class="gearTabLongButton">
                     <div class="gearTabButton" id="mainStatDefenseFilter">
                       <img class="gearTabIcon" src="./assets/statdefdark.png"></img>
-                      <div class="gearTabButtonLabel" data-tl-key="statFlatDefenseLabel">Defense</div>
+                      <div class="gearTabButtonLabel" data-tl-key="statDefenseLabel">Defense</div>
                     </div>
                   </div>
                 </div>
@@ -1056,7 +1056,7 @@ window.jQuery = $;
                   <div class="gearTabLongButton">
                     <div class="gearTabButton" id="subStatAttackFilter">
                       <img class="gearTabIcon" src="./assets/statatkdark.png"></img>
-                      <div class="gearTabButtonLabel" data-tl-key="statFlatAttackLabel">Attack</div>
+                      <div class="gearTabButtonLabel" data-tl-key="statAttackLabel">Attack</div>
                     </div>
                   </div>
                   <div class="gearTabLongButton">
@@ -1084,7 +1084,7 @@ window.jQuery = $;
                   <div class="gearTabLongButton">
                     <div class="gearTabButton" id="subStatHealthFilter">
                       <img class="gearTabIcon" src="./assets/stathpdark.png"></img>
-                      <div class="gearTabButtonLabel" data-tl-key="statFlatHealthLabel">Health</div>
+                      <div class="gearTabButtonLabel" data-tl-key="statHealthLabel">Health</div>
                     </div>
                   </div>
                   <div class="gearTabLongButton">
@@ -1112,7 +1112,7 @@ window.jQuery = $;
                   <div class="gearTabLongButton">
                     <div class="gearTabButton" id="subStatDefenseFilter">
                       <img class="gearTabIcon" src="./assets/statdefdark.png"></img>
-                      <div class="gearTabButtonLabel" data-tl-key="statFlatDefenseLabel">Defense</div>
+                      <div class="gearTabButtonLabel" data-tl-key="statDefenseLabel">Defense</div>
                     </div>
                   </div>
                 </div>
